plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.3' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
    id 'com.epages.restdocs-api-spec' version '0.18.2' apply false
    id 'org.hidetake.swagger.generator' version '2.18.2' apply false
}
subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    group = 'com.onair'
    version = '1.3.6'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    repositories {
        mavenCentral()
    }

    configurations {
        configureEach {
            exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
        }
    }

    processResources {
        filesMatching("**/application.properties") {
            expand(project.properties)
        }
    }
}
